fix overflow in footer

--- a/styles/partials/_footer.scss
+++ b/styles/partials/_footer.scss
@@ -69,7 +69,6 @@
     flex-direction: column;
     justify-content: flex-end;
     height: 100%;
-    white-space: nowrap;
   }
   &__header {
     margin: 0;
